# weather-widget

./: CMakeLists.txt  Main.qml  README.md  main.cpp
backend/: CMakeLists.txt  api_key.txt  weather.cpp  weather.h
keys/: key.h
